--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
 <div class="d-flex justify-content-center align-items-center">
-  <button class="btn btn-primary" (click)="loginWithGoogle()">Login with Google</button>
+  <button class="btn btn-light bg-gradient d-flex align-items-center" (click)="loginWithGoogle()"><span
+      class="icon"></span>Login
+    with Google</button>
 </div>
