--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,5 +1,8 @@
 <div class="chat d-flex flex-column">
-  <h1 class="text-center text-uppercase text-white bg-success bg-gradient m-0 p-1">{{chatName}}</h1>
+  <div class="position-relative bg-success bg-gradient p-2">
+    <h1 class="text-center text-uppercase text-white m-0">{{chatName}}</h1>
+    <button class="back btn btn-dark bg-gradient" (click)="goToList()"><i class="bi bi-arrow-left-short"></i></button>
+  </div>
   <div class="flex-grow-1 overflow-y-auto overflow-x-hidden p-1" #chat [scrollTop]="chat.scrollHeight">
     <app-msg *ngFor="let message of messages$ | async" [url]="message.userAvatar" [username]="message.username"
       [msg]="message.msg" [time]="message.time" [id]="message.userId"></app-msg>
