--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,8 @@
-<div class="d-flex justify-content-center align-items-center">
-  <button class="btn btn-light bg-gradient d-flex align-items-center" (click)="loginWithGoogle()"><span
-      class="icon"></span>Login
+<div class="d-flex flex-column justify-content-center ">
+  <button class="btn btn-light bg-gradient d-flex align-items-center justify-content-center mx-auto"
+    (click)="loginWithGoogle()" cookiePolicy='single-host-origin'><span class="icon google"></span>Login
     with Google</button>
+  <button class="btn btn-light bg-gradient d-flex align-items-center justify-content-center mx-auto"
+    (click)="loginWithGithub()"><i class="bi bi-github icon"></i>Login
+    with Github</button>
 </div>
