--- a/src/app/msg/msg.component.html
+++ b/src/app/msg/msg.component.html
@@ -3,8 +3,11 @@
     <div class="bg-secondary bg-gradient overflow-hidden" [ngClass]="user ? 'user' : 'guest'">
       <p class="m-0 px-3 text-white" [ngClass]="user ? '' : 'bg-primary bg-gradient'">{{user ? '' : username}}</p>
       <p class="m-0 p-3">{{msg}}</p>
+      <div class="p-1" *ngIf="imageUrl">
+        <img class="img-fluid rounded-2" [src]="imageUrl" alt="">
+      </div>
     </div>
-    <img class="border border-2 border-primary"
+    <img class=" avatar border border-2 border-primary"
       [ngClass]="user ? 'hidden' : 'flex-grow-0 align-self-end rounded-circle'" src="{{url}}" alt="">
   </div>
   <p *ngIf="!hidden" class="text-white-50 m-0" [ngClass]="!user ? '' : 'text-end'">{{time | date: 'dd/MM, HH:mm' }}
