--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -12,6 +12,12 @@
   left: 0.5rem;
   transform: translateY(-50%);
 }
+.invite {
+  position: absolute;
+  top: 50%;
+  right: 0.5rem;
+  transform: translateY(-50%);
+}
 .file {
   width: 3rem;
   font-size: 1.5rem;
